# ModpackStore

./: .gitignore  API_CHANGES.md  APPIMAGE_FIX_DOCUMENTATION.md  APPLICATION_INTEGRATION_EXAMPLE.tsx  BACKEND_INTEGRATION_EXAMPLE.ts  CATEGORY_IMPLEMENTATION.md  COMPREHENSIVE_ANALYSIS_REPORT.md  DOWNLOAD_MANAGER_INTEGRATION_EXAMPLE.md  ENHANCED_ERROR_HANDLING.md  ENHANCED_MODPACK_SYSTEM.md  GRANULAR_PERMISSIONS_GUIDE.md  GRANULAR_PERMISSIONS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INCREMENTAL_UPDATES.md  INTEGRATION_EXAMPLE.tsx  LIBRARY_IMPLEMENTATION.md  MARKDOWN_FEATURES.md  MIGRATION_GUIDE.md  MINECRAFT_COMPATIBILITY_IMPROVEMENTS.md  MINECRAFT_LAUNCHER_IMPROVEMENTS.md  MODPACK_ACQUISITION_QR_FEATURES.md  MODPACK_PROCESSING_NOTIFICATIONS.md  MODPACK_UPDATE_ENHANCEMENT.md  NOTIFICATIONS_README.md  OFFLINE_MODE_TEST.md  ONBOARDING_IMPLEMENTATION.md  PATREON_INTEGRATION.md  PAYMENT_SYSTEM_CONFIG.md  PAYMENT_WEBSOCKET_EXAMPLE.md  PAYMENT_WEBSOCKET_SYSTEM.md  PAYPAL_QR_FEATURES.md  PLAY_BUTTON_OPTIMIZATION.md  PLAY_BUTTON_TESTING_PLAN.md  QUICK_START.md  ROBUST_LAUNCHER_IMPLEMENTATION.md  TASKMANAGER_IMPROVEMENTS.md  TESTING_CHECKLIST.md  TESTING_PLAN.md  TWITCH_INTEGRATION.md  (+8 more)
application/src-tauri/: Cargo.toml  appimage.env  build.rs  tauri.conf.json
application/src-tauri/capabilities/: migrated.json
application/src-tauri/resources/: config_schema.yml
application/src-tauri/src/: main.rs
application/src-tauri/src/config/: mod.rs  schema.rs  validation.rs
application/src-tauri/src/core/: accounts_manager.rs  auth.rs  bootstrap_error.rs  instance_bootstrap.rs  instance_launcher.rs  instance_manager.rs  (+11 more)
application/src-tauri/wix/: localapp_fragment.wxs
(+418 files in other folders)
